Fix font-sizes too small in mobile.

--- a/src/Home.css
+++ b/src/Home.css
@@ -70,9 +70,12 @@ a {
 
 @media (max-width: 768px) {
   .title {
+    font-size: 1rem;
     padding: 1rem;
   }
   .menu {
+    font-size: 1rem;
     padding: 0 1rem;
+    width: 14rem;
   }
 }
